tests/snapshots/relationships/fmSyntaxColorizer/[_Home] - [Home_Syntax_Dynamic3] - ID 52.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="52">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">52A76CCF-D8C3-4DA8-8613-F44F47F229C4</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="True" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065157" name="Home.Syntax_Dynamic3"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="1">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="42" name="_gDynamic3Comment">
					<TableOccurrenceReference id="1065123" name="_Home"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="18" name="Comment">
					<TableOccurrenceReference id="1065157" name="Home.Syntax_Dynamic3"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
