tests/snapshots/relationships/fmSyntaxColorizer/[_MBS_DeveloperOptions] - [MBS_DeveloperOptions_Self_Renumber] - ID 59.xml.snap
---
source: src/main.rs
expression: output_content
---
<Relationship id="59">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">07DEB2E7-9196-4940-BF5B-4B3D37521BAE</UUID>
	<LeftTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065152" name="_MBS_DeveloperOptions"></TableOccurrenceReference>
		<SortSpecification value="False" maintain="True"></SortSpecification>
	</LeftTable>
	<RightTable cascadeCreate="False" cascadeDelete="False" type="Local">
		<TableOccurrenceReference id="1065164" name="MBS_DeveloperOptions.Self_Renumber"></TableOccurrenceReference>
		<SortSpecification value="True" maintain="True">
			<SortList membercount="1">
				<Sort type="Ascending">
					<PrimaryField>
						<FieldReference id="15" name="Prio">
							<TableOccurrenceReference id="1065164" name="MBS_DeveloperOptions.Self_Renumber"></TableOccurrenceReference>
						</FieldReference>
					</PrimaryField>
				</Sort>
			</SortList>
		</SortSpecification>
	</RightTable>
	<JoinPredicateList membercount="1">
		<JoinPredicate type="Equal">
			<LeftField>
				<FieldReference id="8" name="_k1">
					<TableOccurrenceReference id="1065152" name="_MBS_DeveloperOptions"></TableOccurrenceReference>
				</FieldReference>
			</LeftField>
			<RightField>
				<FieldReference id="8" name="_k1">
					<TableOccurrenceReference id="1065164" name="MBS_DeveloperOptions.Self_Renumber"></TableOccurrenceReference>
				</FieldReference>
			</RightField>
		</JoinPredicate>
	</JoinPredicateList>
</Relationship>
